// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers should expose a window object: limited window object 1`] = `
Object {
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2020-10/html/getting_started_with_subscription_watch/con-how-does-subscriptionwatch-show-data_assembly-opening-subscriptionwatch-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "browserExpose": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "lorem": "ipsum",
  "noop": [Function],
  "noopPromise": Promise {},
  "noopTranslate": [Function],
}
`;

exports[`Helpers should expose a window object: window object 1`] = `
Object {
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2020-10/html/getting_started_with_subscription_watch/con-how-does-subscriptionwatch-show-data_assembly-opening-subscriptionwatch-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "browserExpose": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "lorem": "ipsum",
  "noop": [Function],
  "noopPromise": Promise {},
  "noopTranslate": [Function],
}
`;

exports[`Helpers should have specific functions: helpers 1`] = `
Object {
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2020-10/html/getting_started_with_subscription_watch/con-how-does-subscriptionwatch-show-data_assembly-opening-subscriptionwatch-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "browserExpose": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "noop": [Function],
  "noopPromise": Promise {},
  "noopTranslate": [Function],
}
`;
